--- a/Ausarbeitung/Simulation.tex
+++ b/Ausarbeitung/Simulation.tex
@@ -3,8 +3,7 @@
 \includegraphics[width=0.5\textwidth]{uml/simOverview.png}
 \caption{Strukturelle Übersicht der Simulation}\label{fig_simOver}
 \end{figure}
-<<<<<<< HEAD
-Um die Konfigurationen für die Heuristiken zu lernen wird die Parkplatzsuche simuliert. Da in dieser Arbeit mehrere Fragen beantwortet werden sollen, sind auch mehrere Simulationen mit unterschiedlichen Randbedingungen notwendig. Der Grundlegende Aufbau jeder Simulation ist jedoch gleich und in Abbildung \ref{fig_simOver} dargestellt. Die Simulation ist objekt-orientiert aufgebaut. Die Straße verwaltet dabei sowohl die Autos und die Parkplätze als auch die diskreten Zeitschritte der Simulation. Autos fahren zu einem zufälligen Zeitpunkt in die Straße ein und erreichen in jedem Zeitschritt, im Folgenden \emph{tick} genannt, einen Parkplatz. Dieser wird, sofern er noch nicht belegt ist, von der Heuristik des Autos, die man als den Fahrer des Autos interpretieren kann, evaluiert. Entscheidet sich die Heuristik für den Parkplatz parkt auch das Auto für eine bestimmte Zeit auf ihm. Das Ausparken wird nur durch die Freigabe des Parkplatzes nach der Parkzeit des Autos modelliert. Um zu garantieren, dass immer Parkplätze gefunden werden, werden in den Simulationen genauso viele Autos eingesetzt wie Parkplätze vorhanden sind. Die genaue Implementierung wird im Anhang erläutert.
+Um die Konfigurationen für die Heuristiken zu lernen wird die Parkplatzsuche simuliert. Da in dieser Arbeit mehrere Fragen beantwortet werden sollen, sind auch mehrere Simulationen mit unterschiedlichen Randbedingungen notwendig. Der Grundlegende Aufbau jeder Simulation ist jedoch gleich und in Abbildung \ref{fig_simOver} dargestellt. Die Simulation ist objekt-orientiert aufgebaut. Die Straße verwaltet dabei sowohl die Autos und die Parkplätze als auch die diskreten Zeitschritte der Simulation. Autos fahren zu einem zufälligen Zeitpunkt in die Straße ein und erreichen in jedem Zeitschritt, im Folgenden \emph{Tick} genannt, einen Parkplatz. Dieser wird, sofern er noch nicht belegt ist, von der Heuristik des Autos, die man als den Fahrer des Autos interpretieren kann, evaluiert. Entscheidet sich die Heuristik für den Parkplatz parkt auch das Auto für eine bestimmte Zeit auf ihm. Das Ausparken wird nur durch die Freigabe des Parkplatzes nach der Parkzeit des Autos modelliert. Um zu garantieren, dass immer Parkplätze gefunden werden, werden in den Simulationen genauso viele Autos eingesetzt wie Parkplätze vorhanden sind. Die genaue Implementierung wird im Anhang erläutert.
 
 \subsection{Wahl der Parameter}
 Die Topologie der Straße, siehe Abbildung \ref{fig_street}, ist von Hutchinson et al übernommen. Die Straße verläuft \emph{U-förmig} mit einem gemeinsamen Ziel für alle Autos im Scheitelpunkt und einer beidseitig zugänglichen Parkfläche in der Mitte. Die Topologie ähnelt also einem Supermarktparkplatz. 
@@ -19,7 +18,7 @@ Die Wartezeit zwischen zwei Autos ist in der Simulation gleichverteilt. Die unte
 
 Wählt ein Auto einen Parkplatz aus, parkt es auf diesem. Der Parkplatz kann für eine bestimmte Zeit nicht von anderen Autos ausgewählt werden. Die Parkdauer in dieser Simulation auf einer Normalverteilung mit Mittelwert $E=1h$ und Standardabweichung $\sigma = 0,5h$. Die Gesamtparkdauer wird durch 
 \begin{align}
-t_{gesamt} &= 2\cdot 2\cdot d + N(X)
+t_{Parkdauer} &= 2\cdot 2\cdot d + N(X)
 \end{align}
 bestimmt. Dabei ist $d$ die Entfernung des Parkplatzes zum Ziel. Es wird analog zu Hutchinson et al angenommen, dass Fußgänger sich mit halber Geschwindigkeit fortbewegen. Die Strecke zwischen Parkplatz und Ziel muss zudem sowohl auf dem Hinweg als auch auf dem Rückweg absolviert werden.
 
@@ -30,3 +29,9 @@ Es werden die folgenden Simulationen ausgewertet:
 	\item Eine Simulation, bei der jedes Auto eine Strategie verfolgt. Der Anteil der Autos mit einer Heuristik beträgt also $100\%$.
 \end{enumerate}
 Die Simulationen mit nur einem systematisch suchenden Fahrer dauern jeweils $10^7$ \emph{Ticks}. Dies resultiert, je nach Verkehrsdichte, in $1400$ bis $4500$ Lernschritten für die Heuristik. Die Ergebnisse werden zeigen, dass sich die Konfigurationen schnell stabilisieren, weswegen für die weiteren Simulationen geringere Laufzeiten verwendet werden können. Für die restlichen Simulationen wurden dann jeweils $10^6$ \emph{Ticks} verwendet ($400$-$1500$ Lernschritte für jede Heuristik).
+
+Die Heuristik, die von der unbeobachteten Population verwendet wird, wählt einen Parkplatz mit einer Wahrscheinlichkeit von 
+\begin{align}
+x = \frac{\text{Entfernung zum Ziel - Straßenlänge} }{\text{Straßenlänge}}
+\end{align}. 
+Dies führt beim besten Parkplatz mit Entfernung $d=0$ zu einer sicheren Wahl, während der am weitesten entfernte Parkplatz nie gewählt wird.
