--- a/Ausarbeitung/Schule.tex
+++ b/Ausarbeitung/Schule.tex
@@ -10,14 +10,24 @@ In diesem Bereich sollen die Schülerinnen und Schüler des Leistungskurses sich
 
 Der komplette Aufbau der Simulation ist nicht geeignet, um ihn von Schülerinnen und Schülern durchführen zu lassen. Die Grundlegende Datei wurde jedoch so erstellt, dass es leicht möglich ist, gewünschte Parameter einfach zu verändern und die Simulation so an Gegebenheiten anzupassen.\\
 Die Schülerinnen und Schüler sollten innerhalb der Unterrichtsreihe Werte sammeln, die sie in die Simulation einfügen können. Dadurch lernen sie reale Situationen so zu beschreiben und zu strukturieren, dass sie die Modellbildung nachvollziehen und in Teilen sogar selbstständig durchführen zu können.\\
-Nachdem die Simulation durchgeführt wurde, sollen die Schülerinnen und Schüler entscheiden, welche Heuristik angewendet werden sollte. 
+Nachdem die Simulation durchgeführt wurde, sollen die Schülerinnen und Schüler entscheiden, welche Heuristik angewendet werden sollte. \\
+Durch die selbstständige Durchführung der Zählung bzw. Befragung, lernen die Schülerinnen und Schüler Methoden der Forschung kennen und anwenden. Dadurch dass sie sich entscheiden müssen, lernen sie das mathematische Argumentieren.
 
 \subsection{Methodische Anmerkungen}
 
 Die Schülerinnen und Schüler sollen zunächst Erkenntnisse über die Realität gewinnen, um die Simulation anzupassen. Dafür können sie an Parkplätzen messen wie viele Autos auf den Parkplatz fahren. Zusätzlich können sie Bekannte befragen auf welche Art und Weise diese Parkplätze aussuchen.\\
-Zwar sind die Schülerinnen und Schüler zu diesem Zeitpunkt etwa 16 Jahre als, dennoch sollte darauf geachtet werden, dass es gefährlich ist sich in der nähe von fahrenden Autos aufzuhalten. Daher ist es auch möglich auf dem Rathaus, bei der Polizei oder im Internet nach den benötigten Informationen zu suchen. \\
+Zwar sind die Schülerinnen und Schüler zu diesem Zeitpunkt etwa 16 Jahre alt, dennoch sollte darauf geachtet werden, dass es gefährlich ist sich in der nähe von fahrenden Autos aufzuhalten. Daher ist es auch möglich auf dem Rathaus, bei der Polizei oder im Internet nach den benötigten Informationen zu suchen. \\
 Diese rohen Werte sollen von den Schülerinnen und Schülern so aufgearbeitet werden, dass diese in die Simulation eingebaut werden können.\\
  Ist die Simulation dann vorbereitet kann sie durchgeführt werden. Die daraus entstandenen Daten können dann in einem Tabellenkalkulationsprogramm zu Diagrammen verarbeitet werden. 
 
 \subsection{Unterrichtsreihe}
 
+\begin{tabular}{lll}
+Stunde & Stundentyp & Inhalt\\
+1+2 & Einstieg & Lehrperson/SuS berichten ihre Wahrnehmung; Fragestellung wird erarbeitet; Modellierungsprozess besprechen; Hausaufgabe: Werte ermitteln\\
+3 & Vertiefung & Besprechen, wie Daten ausgewertet werden; Besprechung der Simulation\\
+4 & Übung/Anwendung & SuS führen die Simulation mit ihren Daten durch\\
+5+6 & Abschluss & Ergebnisse der Simulationen werden ausgewertet; SuS formulieren Hypothese; SuS stellen fest, dass der Modellierungsprozess noch nicht abgeschlossen ist
+\end{tabular}\\
+
+Die Erarbeitung mit Schülerinnen und Schülern ist durchführbar, benötigt jedoch viel Zeit. Daher kann man überlegen, ob diese Aufgabe besser während einer Projektwoche oder innerhalb einer AG nach der Schule zu bearbeiten ist. Durch die Bearbeitung in einer AG kann das komplette Schuljahr genutzt werden und dadurch der Modellierungsprozess tatsächlich angepasst und wiederholt werden.
