--- a/Ausarbeitung/Ergebnisse.tex
+++ b/Ausarbeitung/Ergebnisse.tex
@@ -149,7 +149,7 @@ Nachdem 78 Autos passiert wurden wird ein Platz gewählt, der 55 Plätze vom Zie
 Die Heuristik mit dem linearen Operator findet den besten Platz. 
 \begin{figure}
 	\includegraphics[width=\textwidth]{analyse/JustHeuristik/2pm/linop.png}
-	\caption{Beste Heuristik bei nur lernenden Fahrern und zwei Autos pro Minute: \emph{Linear-Operator}-Heuristik}. Dargestellt ist nur der Schrankenparameter $z_T$. Die Geschwindigkeit ist in Abbildung \ref{fig:ap_jh_loa_2} zu finden.} \label{fig:res_jh_2pm_best}
+	\caption{Beste Heuristik bei nur lernenden Fahrern und zwei Autos pro Minute: \emph{Linear-Operator}-Heuristik Dargestellt ist nur der Schrankenparameter $z_T$. Die Geschwindigkeit ist in Abbildung \ref{fig:ap_jh_loa_2} zu finden.} \label{fig:res_jh_2pm_best}
 \end{figure}
 Mit den gelernten Parametern kann die Ungleichung 
 \begin{align}
@@ -162,7 +162,7 @@ Somit ist die Hypothese weiterhin nicht falsifiziert. Es ist jedoch fraglich, ob
 Wie im letzten Unterkapitel findet auch hier die \emph{Fixed-Distance}-Heuristik den besten Parkplatz.
 \begin{figure}
 	\includegraphics[width=\textwidth]{analyse/JustHeuristik/4pm/fixed4just.png}
-	\caption{Beste Heuristik bei nur lernenden Fahrern und zwei Autos pro Minute: \emph{Fixed-Distance}-Heuristik}} \label{fig:res_jh_4pm_best}
+	\caption{Beste Heuristik bei nur lernenden Fahrern und zwei Autos pro Minute: \emph{Fixed-Distance}-Heuristik} \label{fig:res_jh_4pm_best}
 \end{figure}
 Es ist jedoch wieder so, dass der Fahrer auf 46 Plätze an das Ziel heran fährt und einen Platz erhält, der 62 Plätze vom Ziel entfernt ist (Abbildung \ref{fig:res_jh_4pm_best}). Die Platzwahl verschlechtert sich sogar im Verlauf der Simulation. Zu Beginn ist der Platz lediglich 61 Plätze entfernt.\\
 Die schlechtesten Plätze werden vom linearen Operator und der \emph{Space-Count}-Heuristik gefunden. Nachdem ein Fahrer an 46 freien Plätzen vorbeigefahren ist, wählt er einen Platz der im Schnitt 69 Plätze vom Ziel entfernt ist (Abbildungen \ref{fig:ap_jh_loz_4}, \ref{fig:ap_jh_loz_4} \& \ref{fig:ap_jh_sc_4} im Anhang).\\
