--- a/Ausarbeitung/Bib.tex
+++ b/Ausarbeitung/Bib.tex
@@ -1,3 +1,5 @@
 \begin{thebibliography}{50}
 	\bibitem{hutchinson} Hutchinson, J. M. C., Fanselow, C. \& Todd, P. M. (2012). Car parking as a game between simple heuristics. Pp. 454–484 in P.M. Todd, G. Gigerenzer \& The ABC Research Group (Eds), Ecological rationality: intelligence in the world. New York: Oxford University Press
+	\bibitem{sec1} Ministerium für Bildung, Wissenschaft, Jugend und Kultur Rheinland-Pfalz (Hrsg.) (2007). Rahmenlehrplan Mathematik (Klassenstufen 5-9/10)
+	\bibitem{sec2} Ministerium für Bildung, Wissenschaft, Weiterbildung und Kultur (Hrsg.) (2015). Lehrplan Mathematik: Grund- und Leistungsfach in der gymnasialen Oberstufe (Mainzer Studienstufe): Anpassung an die Bildungsstandards für die allgemeine Hochschulreife, Mainz
 \end{thebibliography}
