--- a/Ausarbeitung/kopf.tex
+++ b/Ausarbeitung/kopf.tex
@@ -13,6 +13,7 @@
 \usepackage[colorlinks=true,urlcolor=blue, linkcolor=black, citecolor=black]{hyperref} %Links innerhalb des Dokuments, alle schwarz
 \sloppy %Blocksatz wird erzwungen (sinnvoll, da Latex Probleme hat, deutsche Wörter zu trennen
 %-----Pakete-----%
+\usepackage{nameref}
 \usepackage{hyperref} % Hyperlinks %http://en.wikibooks.org/wiki/LaTeX/Labels_and_Cross-referencing
 \usepackage{graphicx} %Einbinden von Bildern
 \usepackage{float} %Erlaubt figures mit option H fest im text zu verankern
